fixed skill header positions on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,6 +353,10 @@ main .icons {
         margin: 0.5rem 0;
     }
 
+    .skill-header {
+        margin: 0;
+    }
+
     .bio-portrait {
         grid-column: 2;
         grid-row: 1;
